@startuml "Sistema Logístico de Transporte"

' Configuración visual
skinparam roundcorner 15
skinparam shadowing true
skinparam linetype ortho

' Definición de entidades
entity "Usuario" as usuario {
  **id** : int <<PK>>
  --
  username : varchar(50) <<unique>>
  password : varchar(255)
  nombre : varchar(100)
  email : varchar(100) <<unique>>
  telefono : varchar(20)
  rol : enum(cliente, operador, transportista)
  activo : boolean
}

entity "Cliente" as cliente {
  **id** : int <<PK>>
  --
  usuario_id : int <<FK>>
  cuit : varchar(20) <<unique>>
  direccion : varchar(255)
  datos_adicionales : text
}

entity "Contenedor" as contenedor {
  **id** : int <<PK>>
  --
  identificacion : varchar(50) <<unique>>
  peso : float
  volumen : float
  cliente_id : int <<FK>>
  --
  estado : enum(pendiente, retirado, en_viaje, en_deposito, entregado)
}

entity "Solicitud" as solicitud {
  **id** : int <<PK>>
  --
  numero : varchar(20) <<unique>>
  cliente_id : int <<FK>>
  contenedor_id : int <<FK>>
  tarifa_id : int <<FK>>
  origen_direccion : varchar(255)
  origen_latitud : float
  origen_longitud : float
  destino_direccion : varchar(255)
  destino_latitud : float
  destino_longitud : float
  costo_estimado : float
  tiempo_estimado : int
  costo_final : float
  tiempo_real : int
  fecha_creacion : datetime
  cargo_gestion : float
  costo_total_km : float
  costo_total_combustible : float
  costo_total_estadia : float
  --
  estado : enum(borrador, programada, en_transito, entregada)
}

entity "Ruta" as ruta {
  **id** : int <<PK>>
  --
  solicitud_id : int <<FK>>
  cantidad_tramos : int
  cantidad_depositos : int
  distancia_total : float
  --
  estado : enum(estimada, asignada, en_progreso, completada)
}

entity "Camion" as camion {
  **id** : int <<PK>>
  --
  dominio : varchar(20) <<unique>>
  nombre_transportista : varchar(100)
  telefono : varchar(20)
  capacidad_peso : float
  capacidad_volumen : float
  consumo_combustible : float
  costo_base_km : float
  factor_tarifa_id : int <<FK>>
  disponible : boolean
  transportista_id : int <<FK>>
}

entity "FactorTarifaCamion" as factorTarifa {
  **id** : int <<PK>>
  --
  nombre : varchar(100)
  descripcion : text
  rango_peso_min : float
  rango_peso_max : float
  rango_volumen_min : float
  rango_volumen_max : float
  factor_multiplicador : float
  activo : boolean
}

entity "Deposito" as deposito {
  **id** : int <<PK>>
  --
  nombre : varchar(100)
  direccion : varchar(255)
  latitud : float
  longitud : float
  costo_estadia_dia : float
}

entity "Tramo" as tramo {
  **id** : int <<PK>>
  --
  ruta_id : int <<FK>>
  origen_tipo : enum(solicitud, deposito)
  origen_id : int
  destino_tipo : enum(solicitud, deposito)
  destino_id : int
  distancia : float
  costo_aproximado : float
  costo_real : float
  fecha_hora_inicio_estimada : datetime
  fecha_hora_fin_estimada : datetime
  fecha_hora_inicio : datetime
  fecha_hora_fin : datetime
  camion_id : int <<FK>>
  dias_estadia : int
  costo_estadia : float
  costo_combustible : float
  costo_base_km_aplicado : float
  --
  tipo : enum(origen-deposito, deposito-deposito, deposito-destino, origen-destino)
  estado : enum(estimado, asignado, iniciado, finalizado)
}

entity "Tarifa" as tarifa {
  **id** : int <<PK>>
  --
  nombre : varchar(100)
  valor_base : float
  valor_por_tramo : float
  valor_litro_combustible : float
  cargo_gestion_fijo : float
  fecha_vigencia : date
  activo : boolean
}

entity "Seguimiento" as seguimiento {
  **id** : int <<PK>>
  --
  solicitud_id : int <<FK>>
  estado : varchar(50)
  descripcion : text
  fecha_hora : datetime
  ubicacion_latitud : float
  ubicacion_longitud : float
}

' Relaciones
cliente ||--o{ solicitud  
cliente ||--o{ contenedor 
usuario ||-o| cliente 
usuario ||-o{ camion
contenedor ||--|| solicitud 
solicitud ||--|| ruta
solicitud ||--o{ seguimiento
ruta ||--o{ tramo 
camion ||--o{ tramo 
tarifa ||--o{ solicitud 
deposito }o--o{ tramo 
factorTarifa ||--o{ camion 

note bottom of factorTarifa
  Define los factores de multiplicación
  según capacidad del camión (peso/volumen)
  para calcular costos diferenciados
end note

note bottom of tarifa
  Define valores globales del sistema:
  - Valor base por solicitud
  - Valor por tramo
  - Precio del litro de combustible
  - Cargo fijo de gestión
end note

note bottom of camion
  Cada camión tiene su propio:
  - Costo base por km
  - Consumo de combustible
  - Factor de tarifa según capacidad
end note

note bottom of tramo
  El costo de cada tramo se calcula:
  - Costo base km * distancia * factor del camión
  - Combustible: consumo * distancia * precio litro
  - Estadía: días * costo diario del depósito
end note

@enduml